# gravity-vs-ml

./: .gitignore  Data_extractor.ipynb  Makefile  Pipfile  README.md  evaluations.csv  evaluations_geods.csv  evaluations_google.csv  evaluations_trade.csv  gnn_GyR.ipynb  pyproject.toml
Data_cleaning_and_validation/: Compile_and_validate_trade_data.ipynb  GeoDS_compile_and_validate.py  GeoDS_mobility_compile_and_validate.ipynb  Google_mobility_compile_and_validate.ipynb  Google_mobility_compile_and_validate.py  Trade_compile_and_validate.ipynb  trade_compile_and_validate.py
Data_extraction/: Data_extractor.ipynb  GeoDS_extractor.ipynb  Google_mobility_extractor.ipynb  OSM_extractor.ipynb  State_size_extractor.ipynb  Trade_data_validator.ipynb  US_state_pop.ipynb  WBG_data.ipynb  fetch_GeoDS_data.py  fetch_Google_mobility.py  fetch_OSM.py  fetch_US_state_pop.py  fetch_US_state_size.py  fetch_WBG.py  fetch_cepii_data.py  fetch_country_codes.sh  fetch_country_groups.sh  fetch_trade_data.py  fetch_us_state_distances.py
Deep_gravity/: Mobility_modelling_DG.ipynb
Evaluation/: evaluate.py
GNN_model/: DCRNN_OLS.py  DCRNN_OLS_predictions.csv  gnn.ipynb  run_dcrnn_ols_fit_predict.ipynb
Gravity_model/: create_sample.do  estimate_poisson.do  prediction.csv  prediction_1995-1999.csv  prediction_1996-2000.csv  prediction_1997-2001.csv  prediction_1998-2002.csv  prediction_1999-2003.csv  prediction_2000-2004.csv  prediction_2001-2005.csv  prediction_2003-2007.csv  prediction_2005-2009.csv  prediction_2006-2010.csv  prediction_2007-2011.csv  prediction_2008-2012.csv  read.do  (+7 more)
(+724 files in other folders)
