[tool.poetry]
name = "gnn-chapter"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "gnn_chapter"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^1.5.3"
black = "^23.1.0"
pylint = "^2.17.0"
torch = "^2.0.0"
tqdm = "^4.65.0"
networkx = "^3.0"
jupyter = "^1.0.0"
gitpython = "^3.1.31"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
