[tool.poetry]
name = "gravity-vs-ml"
version = "0.1.0"
description = "Package for chapter 'Can Machine Learning Beat Gravity in Flow Prediction?'"
authors = ["György Ruzicska <ruzicska.gyorgy@gmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^1.5.3"
black = "^23.1.0"
pylint = "^2.17.0"
torch = "^2.0.0"
tqdm = "^4.65.0"
networkx = "^3.0"
jupyter = "^1.0.0"
gitpython = "^3.1.31"
requests = "^2.31.0"
retrying = "^1.3.4"
python-dotenv = "^1.0.1"
geopy = "^2.4.1"
haversine = "^2.8.1"
wbgapi = "^1.0.12"
area = "^1.1.1"
ray = "^2.9.2"
scikit-learn = "^1.4.1.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
